# issues-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  db.sql  db_test.sql  docker-compose.yaml  mock_data.bash
.github/workflows/: prod.yml  stage.yml  stage_cron.yaml  tests.yml
migrations/00000000000000_diesel_initial_setup/: down.sql
migrations/2024-04-13-204151_init/: down.sql  up.sql
migrations/2024-10-13-182544_issue_description/: down.sql  up.sql
migrations/2024-10-13-194531_rewards/: down.sql  up.sql
migrations/2024-10-13-213202_estimation/: down.sql  up.sql
migrations/2024-10-30-101016_make_language_slug_nullable/: down.sql  up.sql
migrations/2024-10-30-171726_make_repo_urls_and_slugs_not_unique_and_add_constraint/: down.sql  up.sql
migrations/2024-11-29-163906_github_id/: down.sql  up.sql
migrations/2024-11-29-214325_tasks/: down.sql  up.sql
migrations/2024-11-29-215037_roles/: down.sql  up.sql
migrations/2025-01-09-124805_create_teams_and_memberships/: down.sql  up.sql
migrations/2025-01-19-212212_issues-to-tasks/: down.sql  up.sql
migrations/2025-01-19-215731_contributor-role/: up.sql
migrations/2025-01-27-234215_add_unique_constraint_to_tasks/: down.sql
migrations/2025-01-29-212911_project-id/: down.sql
migrations/2025-01-30-000000_user_subscriptions/: down.sql  up.sql
migrations/2025-01-30-000001_notifications/: up.sql
migrations/2025-01-30-000003_add_email_notifications_flag/: down.sql  up.sql
migrations/2025-01-30-000004_notification_schedule/: up.sql
secondary_migrations/2025-01-19-212212_issues-to-tasks/: up.sql
secondary_migrations/2025-01-19-215731_contributor-role/: down.sql
secondary_migrations/2025-01-19-223138_tasks-status/: down.sql  up.sql
secondary_migrations/2025-01-27-234215_add_unique_constraint_to_tasks/: up.sql
secondary_migrations/2025-01-29-212647_repository-id/: down.sql  up.sql
secondary_migrations/2025-01-29-212911_project-id/: up.sql
src/: auth.rs  auth_error.rs  error.rs  error_handler.rs  errors.rs  handlers.rs  http.rs  main.rs  pagination.rs  schema.rs  types.rs  utils.rs
src/api/: mod.rs
(+135 files in other folders)
