[package]
name = "kudos_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.34", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
mobc = "0.8.3"
mobc-postgres = { version = "0.8.0", features = ["with-chrono-0_4"] }
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"] }
serde_derive = "1.0.193"
base64 = "0.22.0"
url = "2.5.0"
diesel = { version = "2.1.5", features = ["postgres"] }
regex = "1.10.4"
