[package]
name = "kudos_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"] }
serde_derive = "1.0.193"
base64 = "0.22.0"
url = "2.5.0"
diesel = { version = "2.1.5", features = ["postgres", "chrono", "r2d2"] }
regex = "1.10.4"
